--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
 				<div class="inner">
 					<section>
 						<h2>Get in touch</h2>
-						<form method="post" action="#">
+						
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<!-- <form method="post" action="#">
 							<div class="fields">
 								<div class="field half">
 									<input type="text" name="name" id="name" placeholder="Name" />
@@ -121,7 +123,7 @@
 							<ul class="actions">
 								<li><input type="submit" value="Send" class="primary" /></li>
 							</ul>
-						</form>
+						</form> -->
 					</section>
 					<section>
 						<h2>Let’s Connect</h2>
@@ -132,9 +134,14 @@
 										class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands style2 fa-instagram"><span
 										class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-							<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
-							</li>
+							<li><a href="tel:+17201234567" class="icon solid style2 fa-phone"><span class="label">Phone</span>
+									</a></li>
+
+			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" 
+								class="icon solid style2 fa-envelope" 
+								target="_blank" 
+								rel="noopener noreferrer"><span class="label">Email</span></a>
+													</li>
 						</ul>
 					</section>
 					<ul class="copyright">
@@ -146,7 +153,7 @@
 
 		</div>
 
-		<!-- Scripts -->
+		
 		<script src="assets/js/jquery.min.js"></script>
 		<script src="assets/js/browser.min.js"></script>
 		<script src="assets/js/breakpoints.min.js"></script>
