--- a/index.html
+++ b/index.html
@@ -108,7 +108,25 @@
 					<section>
 						<h2>Get in touch</h2>
 						
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+
+						<form action="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/formResponse" method="POST" target="_blank">
+  <div class="fields">
+    <div class="field half">
+      <input type="text" name="entry.1471984923" placeholder="Name" required />
+    </div>
+    <div class="field half">
+      <input type="email" name="entry.883296175" placeholder="Email" required />
+    </div>
+    <div class="field">
+      <textarea name="entry.1108391242" placeholder="Message" required></textarea>
+    </div>
+  </div>
+  <ul class="actions">
+    <li><input type="submit" value="Send" class="primary" /></li>
+  </ul>
+</form>
+
 						<!-- <form method="post" action="#">
 							<div class="fields">
 								<div class="field half">
