phone icon to call

--- a/index.html
+++ b/index.html
@@ -147,20 +147,22 @@
 					<section>
 						<h2>Let’s Connect</h2>
 						<ul class="icons">
-							<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
+						<li>
+							<a href="https://www.linkedin.com/in/murat-akbas-m-ed-6387579b/" target="_blank" class="icon brands style2 fa-linkedin">
+							<span class="label">LinkedIn</span>
+							</a>
+							</li>	
+							<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
 							</li>
 							<li><a href="#" class="icon brands style2 fa-facebook-f"><span
-										class="label">Facebook</span></a></li>
+										class="label">Facebook</span></a></li> -->
 							<li><a href="#" class="icon brands style2 fa-instagram"><span
 										class="label">Instagram</span></a></li>
 							<li><a href="tel:+17201234567" class="icon solid style2 fa-phone"><span class="label">Phone</span>
 									</a></li>
 
-			<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" 
-								class="icon solid style2 fa-envelope" 
-								target="_blank" 
-								rel="noopener noreferrer"><span class="label">Email</span></a>
-													</li>
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
+							</li>
 						</ul>
 					</section>
 					<ul class="copyright">
