--- a/translation.html
+++ b/translation.html
@@ -102,13 +102,19 @@
 					<section>
 						<h2>Let's Connect</h2>
 						<ul class="icons">
-							<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
-							</li>
-							<li><a href="#" class="icon brands style2 fa-facebook-f"><span
-										class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands style2 fa-instagram"><span
-										class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+							<!-- <li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a>
+							</li> -->
+							<!-- <li><a href="#" class="icon brands style2 fa-facebook-f"><span
+										class="label">Facebook</span></a></li> -->
+							<li>
+							<a href="https://www.linkedin.com/in/murat-akbas-m-ed-6387579b/" target="_blank" class="icon brands style2 fa-linkedin">
+							<span class="label">LinkedIn</span>
+							</a>
+							</li>			
+							<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
+							 <li><a href="tel:+17201234567" class="icon solid style2 fa-phone"><span class="label">Phone</span>
+									</a></li>
 							<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
 							</li>
 						</ul>
