--- a/consulting.html
+++ b/consulting.html
@@ -111,7 +111,7 @@
 							</li>
 							<li><a href="#" class="icon brands style2 fa-facebook-f"><span
 										class="label">Facebook</span></a></li> -->
-							<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+							<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<li><a href="tel:+17201234567" class="icon solid style2 fa-phone"><span class="label">Phone</span>
 									</a></li>
 							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
