--- a/translation.html
+++ b/translation.html
@@ -115,7 +115,9 @@
 							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
 							 <li><a href="tel:+17201234567" class="icon solid style2 fa-phone"><span class="label">Phone</span>
 									</a></li>
-							<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
+							<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
+							</li> -->
+							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
 							</li>
 						</ul>
 					</section>
