--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 					<section>
 						<h2>Get in touch</h2>
 						
-						<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-						<form action="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/formResponse" method="POST" target="_blank">
+						<!-- <form action="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/formResponse" method="POST" target="_blank">
   <div class="fields">
     <div class="field half">
       <input type="text" name="entry.1471984923" placeholder="Name" required />
@@ -125,7 +125,7 @@
   <ul class="actions">
     <li><input type="submit" value="Send" class="primary" /></li>
   </ul>
-</form>
+</form> -->
 
 						<!-- <form method="post" action="#">
 							<div class="fields">
