--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
 				<div class="inner">
 					<section>
 						<h2>Get in touch</h2>
-						<form id="contactForm">
-  <input type="text" name="name" placeholder="Name" required />
-  <input type="email" name="email" placeholder="Email" required />
-  <textarea name="message" placeholder="Message" required></textarea>
-  <button type="submit">Send</button>
-</form>
+			<form id="contactForm">
+			<input type="text" name="name" id="name" placeholder="Name" required />
+			<input type="email" name="email" id="email" placeholder="Email" required />
+			<textarea name="message" id="message" placeholder="Message" required></textarea>
+			<button type="submit">Send</button>
+			</form>
 
 <script>
   const form = document.querySelector("form");
