--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     };
 
     try {
-      const response = await fetch("https://a-link-backend.onrender.com/save-form", {
+      const response = await fetch("https://a-link-backend.onrender.com/submit", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
