--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 				<div class="inner">
 					<section>
 						<h2>Get in touch</h2>
-			<form id="contactForm">
+			<!-- <form id="contactForm">
 			<input type="text" name="name" id="name" placeholder="Name" required />
 			<input type="email" name="email" id="email" placeholder="Email" required />
 			<textarea name="message" id="message" placeholder="Message" required></textarea>
@@ -141,7 +141,7 @@
       alert("Error submitting form");
     }
   });
-</script>
+</script> -->
 					
 						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
