Update translation.html with services offered
Added services offered section to the translation page.

--- a/translation.html
+++ b/translation.html
@@ -71,6 +71,11 @@
 				<p>
 				Partner with us to create inclusive environments where language is never a barrier. Our commitment to quality and
 				clarity ensures that your message reaches every audience with impact and respect.
+				Services Offered
+    •    Document translation
+    •    On-site interpretation
+    •    Phone and video interpretation
+    •    Education, HR, and administrative translation
 				</p>
 	
 				</div>
@@ -138,5 +143,6 @@
 		<script src="assets/js/main.js"></script>
 
 	</body>
+
 
 </html>
