Revise index.html for service updates
Updated the content and structure of the index.html file to reflect changes in the A-LINK USA services offered.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<div class="inner">
 					<header>
 						<h1>A-LINK USA<br />
-							Your Partner in Education, HR, and Language Access.</h1>
+							Your Partner in Translation, Recruitment, and HR Consulting</h1>
 						<p>Empowering Education & Communication through HR and Translation Services.</p>
 					</header>
 					<section class="tiles">
@@ -217,5 +217,6 @@
 		<script src="assets/js/main.js"></script>
 
 	</body>
+
 
 </html>
