Revise index.html with new content and layout
Updated the content and structure of the index.html file.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<header>
 						<h1>A-LINK USA<br />
 							Your Partner in Translation, Recruitment, and HR Consulting</h1>
-						<p>Empowering Education & Communication through HR and Translation Services.</p>
+						<p>Supporting organizations and individuals through language access, talent solutions, and HR expertise</p>
 					</header>
 					<section class="tiles">
 						<article class="style3">
@@ -220,3 +220,4 @@
 
 
 </html>
+
