updates after review

--- a/consulting.html
+++ b/consulting.html
@@ -27,7 +27,7 @@
 					<!-- Logo -->
 					<a href="index.html" class="logo">
 						<span class="symbol"><img src="images/logo.png" alt="" /></span><span
-							class="title">A-LINK</span>
+							class="title"></span>
 					</a>
 
 					<!-- Nav -->
@@ -59,20 +59,45 @@
 					<h1>HR Consulting</h1>
 					<span class="image main"><img src="images/consulting.png" alt="" /></span>
 				<p>
-					A-LINK LLC provides customized Human Resources consulting services for organizations in education and public service.
-					We help you build strong foundations in recruitment, onboarding, employee relations, compliance, and policy development.
+					<b>A-LINK USA provides customized HR consulting services to support organizations of all sizes and across industries.</b> We help build strong HR foundations that align people, policies, and practices with your organization’s goals, culture, and operational needs.
 					</p>
 					<p>
-					Whether you're a growing non-profit, a startup school, or a community-focused business, we offer expert support
-					tailored to your values and structure. From crafting inclusive job descriptions to navigating employment law,
-					we’re here to guide your HR practices with clarity and confidence.
+					Whether you’re a growing business, nonprofit, or educational organization, we offer practical, hands-on support across the employee lifecycle—from structure and documentation to onboarding, compliance, and employee relations. Our approach is collaborative, thoughtful, and tailored to your unique environment.
 					</p>
 					<p>
-					Partner with us to foster a positive work culture, improve operational efficiency, and align your people strategy
-					with your organization’s mission.
+					Partner with us to strengthen your internal operations, foster a positive workplace culture, and implement HR practices that support long-term success.
 					</p>
 
-	
+					<b>HR Consulting Services</b><br />
+				<b>Organizational Structure & Documentation</b>
+				<ul>
+					<li>Organizational charts and role alignment</li>
+					<li>Job descriptions and role definitions</li>
+					<li>Policy and procedure development</li>
+					<li>Employee handbooks (customized and compliant)</li>
+				</ul>
+				<b>Onboarding & Workforce Support</b>
+				<ul>
+					<li>Onboarding strategies and processes</li>
+					<li>Employee relations support</li>
+					<li>Performance and communication guidance</li>
+					<li>Workplace culture and engagement support</li>
+					<li>Training and development recommendations</li>
+
+				</ul>
+				<b>Compliance & Policy Support</b>
+				<ul>
+					<li>Employment compliance guidance</li>
+					<li>Credentialing support for schools and educational organizations</li>
+					<li>Policy review and updates</li>
+					<li>HR documentation audits and best practices</li>
+				</ul>
+				<b>Strategic HR Support</b>
+				<ul>
+					<li>HR process improvement</li>
+					<li>Alignment of people strategy with organizational goals</li>
+					<li>Support for growing and changing organizations</li>
+				</ul>
 				</div>
 			</div>
 
@@ -80,7 +105,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<section>
-						<h2>Get in touch</h2>
+						<h2>Submit Request</h2>
 						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						<!-- <form method="post" action="#">
 							<div class="fields">
@@ -112,12 +137,12 @@
 							<li><a href="#" class="icon brands style2 fa-facebook-f"><span
 										class="label">Facebook</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
-							<li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
-									</a></li>
+							<!-- <li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
+									</a></li> -->
 							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
 							<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
 							</li> -->
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
+							<li><a href="mailto:muratakbas001@gmail.com" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
 							</li>
 						</ul>
 					</section>
