--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 
 					<!-- Logo -->
 					<a href="index.html" class="logo">
-						<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title">A-LINK
-							USA</span>
+						<span class="symbol"><img src="images/logo.png" alt="" /></span><span class="title"></span>
 					</a>
 
 					<!-- Nav -->
@@ -56,9 +55,9 @@
 			<div id="main">
 				<div class="inner">
 					<header>
-						<h1>A-LINK USA<br />
-							Your Partner in Translation, Recruitment, and HR Consulting</h1>
-						<p>Supporting organizations and individuals through language access, talent solutions, and HR expertise</p>
+						<h1>A-LINK USA</h1><br />
+						<h1>Your Partner in Translation, Recruitment, and HR Consulting</h1>
+						<h3>Supporting organizations and individuals through language access, talent solutions, and HR expertise</h3>
 					</header>
 					<section class="tiles">
 						<article class="style3">
@@ -68,8 +67,7 @@
 							<a href="translation.html">
 								<h2>TRANSLATION</h2>
 								<div class="content">
-									<p>Professional translation and interpretation services to ensure clear, accurate,
-										and culturally sensitive communication across languages.</p>
+									<p>Professional translation and interpretation services delivering clear, accurate, and culturally sensitive communication for individuals and organizations.</p>
 								</div>
 							</a>
 						</article>
@@ -80,8 +78,7 @@
 							<a href="recruitment.html">
 								<h2>Recruitment</h2>
 								<div class="content">
-									<p>We connect organizations with qualified, mission-driven candidates in the
-										education and non-profit sectors. Let us help you build a stronger team.</p>
+									<p>We connect organizations with qualified, mission-driven candidates to support their hiring and growth needs. Let us help you build a stronger team.</p>
 								</div>
 							</a>
 						</article>
@@ -92,8 +89,7 @@
 							<a href="consulting.html">
 								<h2>HR CONSULTING</h2>
 								<div class="content">
-									<p>Customized HR solutions tailored to your organization’s culture and goals — from
-										onboarding to compliance and everything in between.</p>
+									<p>Customized HR solutions tailored to your organization’s culture and goals—from onboarding and compliance to ongoing people support.</p>
 								</div>
 							</a>
 						</article>
@@ -106,7 +102,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<section>
-						<h2>Get in touch</h2>
+						<h2>SUBMIT REQUEST</h2>
 			<!-- <form id="contactForm">
 			<input type="text" name="name" id="name" placeholder="Name" required />
 			<input type="email" name="email" id="email" placeholder="Email" required />
@@ -143,7 +139,7 @@
   });
 </script> -->
 					
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8IepsqdABISP7It_xfNQbdEDEBE0su3vOB4eYJMVPUasBfw/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 						<!-- <form action="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/formResponse" method="POST" target="_blank">
   <div class="fields">
@@ -193,10 +189,10 @@
 										class="label">Facebook</span></a></li> -->
 							<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span
 										class="label">Instagram</span></a></li> -->
-							<li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
-							</a></li>
+							<!-- <li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
+							</a></li> -->
 
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
+							<li><a href="mailto:muratakbas001@gmail.com" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
 							</li>
 						</ul>
 					</section>
