--- a/recruitment.html
+++ b/recruitment.html
@@ -27,7 +27,7 @@
 					<!-- Logo -->
 					<a href="index.html" class="logo">
 						<span class="symbol"><img src="images/logo.png" alt="" /></span><span
-							class="title">A-LINK</span>
+							class="title"></span>
 					</a>
 
 					<!-- Nav -->
@@ -59,19 +59,24 @@
 					<h1>Recruitment</h1>
 					<span class="image main"><img src="images/recruitment.png" alt="" /></span>
 					 <p>
-						At A-LINK we specialize in connecting mission-driven organizations with passionate, qualified professionals.
-						Our recruitment services are tailored to the needs of educational institutions, non-profits, and cross-cultural
-						environments, ensuring you find the right people to support your mission.
+						<b>A-LINK, we specialize in connecting organizations with passionate, qualified professionals who align with their goals, values, and culture.</b> Our recruitment services are designed to support organizations across industries, including nonprofits, education, and mission-driven businesses, helping you build teams that make an impact.
 						</p>
 						<p>
-						Whether you're hiring for long-term staff or short-term projects, we streamline the process—handling job postings,
-						candidate screening, and interview coordination—so you can focus on what you do best. We also prioritize cultural
-						fit, language needs, and educational values to ensure successful placements.
+						Whether you’re hiring for long-term roles or short-term projects, we streamline the recruitment process—from job postings and candidate screening to interview coordination—so you can focus on what matters most. We take a thoughtful approach to hiring, prioritizing skills, cultural alignment, and language needs to ensure successful placements.
 						</p>
 						<p>
-						Let us help you build a strong, values-aligned team. With our bilingual and multicultural expertise, we ensure
-						clarity and confidence at every stage of the hiring journey.
+						With our bilingual and multicultural expertise, we support organizations operating in diverse and cross-cultural environments. Let us help you build a strong, values-aligned team with clarity and confidence at every stage of the hiring journey.
 						</p>
+
+						<b>Recruitment Services Include:</b>
+				<ul>
+					<li>Full-cycle recruitment support</li>
+					<li>Job posting and outreach</li>
+					<li>Candidate screening and shortlisting</li>
+					<li>Interview coordination</li>
+					<li>Short-term, long-term, and project-based hiring</li>
+					<li>Bilingual and multicultural talent placement</li>
+				</ul>
 				</div>
 			</div>
 
@@ -79,8 +84,8 @@
 			<footer id="footer">
 				<div class="inner">
 					<section>
-						<h2>Get in touch</h2>
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<h2>Submit Request</h2>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8IepsqdABISP7It_xfNQbdEDEBE0su3vOB4eYJMVPUasBfw/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						<!-- <form method="post" action="#">
 							<div class="fields">
 								<div class="field half">
@@ -111,12 +116,12 @@
 							</a>
 							</li>	
 							<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
-							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
+							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
 							 <li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
-									</a></li>
+									</a></li> -->
 							<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
 							</li> -->
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
+							<li><a href="mailto:muratakbas001@gmail.com" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
 							</li>
 						</ul>
 					</section>
