--- a/translation.html
+++ b/translation.html
@@ -27,7 +27,7 @@
 					<!-- Logo -->
 					<a href="index.html" class="logo">
 						<span class="symbol"><img src="images/logo.png" alt="" /></span><span
-							class="title">A-LINK</span>
+							class="title"></span>
 					</a>
 
 					<!-- Nav -->
@@ -59,20 +59,42 @@
 					<h1>Translation</h1>
 					<span class="image main"><img src="images/translation.png" alt="" /></span>
 				 <p>
-				A-LINK LLC provides professional translation and interpretation services to help organizations communicate clearly,
-				accurately, and effectively across language barriers. We support multilingual communities by ensuring access to
-				vital information in education, healthcare, and public services.
+				<b>A-LINK LLC provides professional translation and interpretation services to support clear, accurate, and culturally appropriate communication for organizations and individuals.</b> We specialize in Turkish–English and English–Turkish translation, helping clients navigate language barriers with confidence and precision.
 				</p>
 				<p>
-				Our experienced translators and interpreters specialize in academic, technical, and community-based contexts.
-				Whether it’s translating written documents or facilitating live interpretation, we prioritize linguistic accuracy,
-				cultural sensitivity, and timely delivery.
+				Our services are delivered by an <b>ATA-Certified Translator</b>, ensuring the highest standards of linguistic accuracy, professionalism, and ethical practice. Whether you need document translation, live interpretation, or certified translations for official use, we are committed to quality, clarity, and timely delivery.
 				</p>
 				<p>
-				Partner with us to create inclusive environments where language is never a barrier. Our commitment to quality and
-				clarity ensures that your message reaches every audience with impact and respect.
+				We also support <b>notarization and apostille services</b> when required, offering a streamlined solution for legal, academic, immigration, and international documents. Our goal is to ensure your message is understood clearly and respectfully—every time.
 				</p>
-	
+
+				<b>Translation & Interpretation Services</b><br />
+				<b>Document Translation</b>
+				<ul>
+					<li>Turkish ⇄ English translation</li>
+					<li>Legal, academic, technical, and business documents</li>
+					<li>Personal documents (certificates, diplomas, transcripts, letters, affidavits)</li>
+					<li>Certified translations for official and international use</li>
+				</ul>
+				<b>Interpretation Services</b>
+				<ul>
+					<li>Consecutive and simultaneous interpretation</li>
+					<li>Meetings, interviews, and appointments</li>
+					<li>Community, business, and professional settings</li>
+				</ul>
+				<b>Certified, Notarized & Apostilled Translations</b>
+				<ul>
+					<li>ATA-Certified translations</li>
+					<li>Notarization available upon request</li>
+					<li>Apostille assistance for international document use</li>
+					<li>Suitable for immigration, courts, schools, universities, and government agencies</li>
+				</ul>
+				<b>Language Access Support</b>
+				<ul>
+					<li>Clear, culturally sensitive communication</li>
+					<li>Support for individuals and organizations</li>
+					<li>Confidential and secure handling of documents</li>
+				</ul>
 				</div>
 			</div>
 
@@ -80,8 +102,8 @@
 			<footer id="footer">
 				<div class="inner">
 					<section>
-						<h2>Get in touch</h2>
-						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+						<h2>Submit Request</h2>
+						<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf8IepsqdABISP7It_xfNQbdEDEBE0su3vOB4eYJMVPUasBfw/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 						<!-- <form method="post" action="#">
 							<div class="fields">
 								<div class="field half">
@@ -113,11 +135,11 @@
 							</li>			
 							<!-- <li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<!-- <li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li> -->
-							 <li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
-									</a></li>
+							 <!-- <li><a href="tel:+17144064441" class="icon solid style2 fa-phone"><span class="label">Phone</span>
+									</a></li> -->
 							<!-- <li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a>
 							</li> -->
-							<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdIVqwu6j2IHlkulQlW4EhCHzyJLFYrLpOSxyTtq0_rs2c1_w/viewform" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
+							<li><a href="mailto:muratakbas001@gmail.com" class="icon solid style2 fa-envelope" target="_blank" rel="noopener noreferrer"><span class="label">Email</span></a>
 							</li>
 						</ul>
 					</section>
