update image size

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</article>
 						<article class="style1">
 							<span class="image">
-								<img src="images/recruitment.png" alt="" />
+								<img src="images/recruitmentm.png" alt="" />
 							</span>
 							<a href="recruitment.html">
 								<h2>Recruitment</h2>
