turkce sayfalar ve menu

--- a/index.html
+++ b/index.html
@@ -41,14 +41,24 @@
 
 			<!-- Menu -->
 			<nav id="menu">
-				<h2>Menu</h2>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="translation.html">Translation</a></li>
-					<li><a href="recruitment.html">Recruitment</a></li>
-					<li><a href="consulting.html">HR Consulting</a></li>
-					<!-- <li><a href="elements.html">Elements</a></li> -->
-				</ul>
+			<h2>Menu</h2>
+
+			<!-- Language Switch -->
+			 <div class="lang-block">
+			<div class="lang-title">Language/Dil</div>
+					<ul class="lang-switch">
+			<ul class="lang-switch">
+				<li><a href="index.html" class="active">English</a></li>
+				<li><a href="index-tr.html">Turkce</a></li>
+			</ul>
+			</div>
+
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="translation.html">Translation</a></li>
+				<li><a href="recruitment.html">Recruitment</a></li>
+				<li><a href="consulting.html">HR Consulting</a></li>
+			</ul>
 			</nav>
 
 			<!-- Main -->
