--- a/recruitment.html
+++ b/recruitment.html
@@ -42,15 +42,24 @@
 
 			<!-- Menu -->
 			<nav id="menu">
-				<h2>Menu</h2>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="translation.html">Translation</a></li>
-					<li><a href="recruitment.html">Recruitment</a></li>
-					<li><a href="consulting.html">HR Consulting</a></li>
+			<h2>Menu</h2>
 
-					<!-- <li><a href="elements.html">Elements</a></li> -->
-				</ul>
+			<!-- Language Switch -->
+			 <div class="lang-block">
+			<div class="lang-title">Language/Dil</div>
+					<ul class="lang-switch">
+			<ul class="lang-switch">
+				<li><a href="recruitment.html" class="active">English</a></li>
+				<li><a href="recruitment-tr.html">Turkce</a></li>
+			</ul>
+			</div>
+
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="translation.html">Translation</a></li>
+				<li><a href="recruitment.html">Recruitment</a></li>
+				<li><a href="consulting.html">HR Consulting</a></li>
+			</ul>
 			</nav>
 
 			<!-- Main -->
