ana sayfa correction

--- a/index-tr.html
+++ b/index-tr.html
@@ -51,7 +51,7 @@
 						<li><a href="index-tr.html" class="active">Turkce</a></li>
 					</ul>
 			</div>
-			
+
 			<ul>
 				<li><a href="index-tr.html">ANA SAYFA</a></li>
 				<li><a href="translation-tr.html">TERCÜMANLIK</a></li>
@@ -65,7 +65,7 @@
 				<div class="inner">
 					<header>
 						<h1>A-LINK USA</h1><br />
-						<h1>Çeviri, İşçi Bulma ve İK Danışmanlığında İş Ortağınız</h1>
+						<h1>Tercümanlık, İşçi Bulma ve İK Danışmanlığında İş Ortağınız</h1>
 						<h3>Dil erişimi, yetenek çözümleri ve İK uzmanlığı ile kurumları ve bireyleri destekliyoruz</h3>
 					</header>
 					<section class="tiles">
