ise alim degisikligi

--- a/index-tr.html
+++ b/index-tr.html
@@ -55,7 +55,7 @@
 			<ul>
 				<li><a href="index-tr.html">ANA SAYFA</a></li>
 				<li><a href="translation-tr.html">TERCÜMANLIK</a></li>
-				<li><a href="recruitment-tr.html">İŞÇİ BULMA</a></li>
+				<li><a href="recruitment-tr.html">İŞE ALIM</a></li>
 				<li><a href="consulting-tr.html">İK DANIŞMANLIĞI</a></li>
 			</ul>
 			</nav>
@@ -65,7 +65,7 @@
 				<div class="inner">
 					<header>
 						<h1>A-LINK USA</h1><br />
-						<h1>Tercümanlık, İşçi Bulma ve İK Danışmanlığında İş Ortağınız</h1>
+						<h1>Tercümanlık, İşe Alım ve İK Danışmanlığında İş Ortağınız</h1>
 						<h3>Dil erişimi, yetenek çözümleri ve İK uzmanlığı ile kurumları ve bireyleri destekliyoruz</h3>
 					</header>
 					<section class="tiles">
