--- a/recruitment-tr.html
+++ b/recruitment-tr.html
@@ -56,7 +56,7 @@
 			<ul>
 				<li><a href="index-tr.html">ANA SAYFA</a></li>
 				<li><a href="translation-tr.html">TERCÜMANLIK</a></li>
-				<li><a href="recruitment-tr.html">İŞÇİ BULMA</a></li>
+				<li><a href="recruitment-tr.html">İŞE ALIM</a></li>
 				<li><a href="consulting-tr.html">İK DANIŞMANLIĞI</a></li>
 			</ul>
 			</nav>
@@ -64,7 +64,7 @@
 			<!-- Main -->
 			<div id="main">
 				<div class="inner">
-					<h1>İŞÇİ BULMA</h1>
+					<h1>İŞE ALIM</h1>
 					<span class="image main"><img src="images/recruitment.png" alt="" /></span>
 					 <p>
 						<b>A-LINK olarak, kuruluşları hedefleri, değerleri ve kültürleriyle uyumlu; tutkulu ve nitelikli profesyonellerle buluşturma konusunda uzmanız.</b>İşçi bulma hizmetlerimiz; kâr amacı gütmeyen kuruluşlar, eğitim sektörü ve misyon odaklı işletmeler başta olmak üzere birçok sektördeki kuruluşları destekleyerek, etki yaratan ekipler kurmanıza yardımcı olur.
