--- a/translation-tr.html
+++ b/translation-tr.html
@@ -56,7 +56,7 @@
 			<ul>
 				<li><a href="index-tr.html">ANA SAYFA</a></li>
 				<li><a href="translation-tr.html">TERCÜMANLIK</a></li>
-				<li><a href="recruitment-tr.html">İŞÇİ BULMA</a></li>
+				<li><a href="recruitment-tr.html">İŞE ALIM</a></li>
 				<li><a href="consulting-tr.html">İK DANIŞMANLIĞI</a></li>
 			</ul>
 			</nav>
